# 3dof_robotic_arm_ros1

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: 3DoF_RRR_Robot_Arm.srdf  dynamixel_config.yaml  gazebo_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  robot_params.yaml
config/controllers/: effort_controller.yaml  position_controller.yaml  velocity_controller.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/3DoF_RRR_Robot_Arm_description/share/3DoF_RRR_Robot_Arm_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/3DoF_RRR_Robot_Arm_moveit_config/share/3DoF_RRR_Robot_Arm_moveit_config/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: demo.launch  gazebo.launch  gazebo_moveit.launch  move_group.launch  real_robot.launch
meshes/: base_part1.stl  kapak_new.stl  link_2_cover.stl  rulman.stl  servo_1.stl
recordings/exports/: recording_20260301_202354.json  recording_20260301_202453.json
scripts/: ann_motion_predictor.py  aruco_mqtt_sender.py  aruco_position.py  aruco_test.py  basic_move.py  dh_parameters.py  fake_joint_trajectory_action_server.py  forward_kinematics.py  inverse_kinematics.py  kinematic_3r_location.py  motion_recorder.py  moveit_direct_sync.py  mqtt_robot_ann_controller.py  mqtt_robot_arduino_controller.py  mqtt_robot_controller.py  mqtt_robot_dual_controller.py  real_robot_controller.py  robot_controller.py  serial_robot_bridge.py
scripts/robot_control_opencm9.04/: robot_control_opencm9.04.ino
src/3DoF_RRR_Robot_Arm_description/: CMakeLists.txt
src/3DoF_RRR_Robot_Arm_description/meshes/: base_link.stl  base_part2.stl  gripper.stl  link_1.stl  link_sonu_Servo.stl  metal_part_servo2.stl  servo_2.stl
src/3DoF_RRR_Robot_Arm_description/scripts/: moveit_direct_sync.py
src/3DoF_RRR_Robot_Arm_description/urdf/: 3DoF_RRR_Robot_Arm.urdf
src/3DoF_RRR_Robot_Arm_moveit_config/: CMakeLists.txt  package.xml
src/3DoF_RRR_Robot_Arm_moveit_config/config/: moveit.rviz  moveit_controllers.yaml
src/3DoF_RRR_Robot_Arm_moveit_config/launch/: demo.launch.py
src/3DoF_RRR_Robot_Arm_moveit_config/scripts/: fake_joint_trajectory_action_server.py
urdf/: 3DoF_RRR_Robot_Arm.urdf  3DoF_RRR_Robot_Arm_gazebo.urdf  robot.urdf copy.xacro  robot.urdf.xacro
