<?xml version="1.0"?>
<package format="2">
  <name>3dof_rrr_robot_arm</name>
  <version>1.0.0</version>
  <description>3DoF RRR Robot Arm - MoveIt Configuration Package for ROS1</description>
  <maintainer email="emirtug@todo.todo">emirtug</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <depend>tf</depend>
  <depend>tf2_ros</depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_simple_controller_manager</depend>

  <!-- Gazebo Dependencies -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>position_controllers</depend>
  <depend>joint_trajectory_controller</depend>

  <export>
  </export>
</package>
