<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>3DoF_RRR_Robot_Arm_moveit_config</name>
  <version>0.0.0</version>
  <description>MoveIt configuration package for 3DoF RRR Robot Arm</description>
  <maintainer email="ofu.951@gmail.com">omer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_move_group</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>3DoF_RRR_Robot_Arm_description</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>rclpy</depend>
  <depend>control_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
